
plugins {
    id 'java'
    id 'maven-publish'
    id "com.palantir.git-version" version "0.12.3"
}
Properties properties = new Properties()
def propertiesFile = project.rootProject.file('local.properties')
if (propertiesFile.exists()) {
    properties.load(propertiesFile.newDataInputStream())
}

group 'ekimeel'
version gitVersion()

sourceCompatibility = 1.8

repositories {
    mavenCentral()
    maven {
        url "https://maven.pkg.github.com/ekimeel/*"
        credentials {
            username = properties.get("github.actor") ?: System.getenv("GITHUB_ACTOR")
            password = properties.get("github.token") ?: System.getenv("GITHUB_TOKEN")
        }
    }
}

dependencies {
    /* kind */

    compile group: 'com.google.guava', name: 'guava', version: '30.1-jre'
    testCompile group: 'junit', name: 'junit', version: '4.12'
}

publishing {
    repositories {
        maven {
            name = "${rootProject.name}-${version}"
            url = uri("https://maven.pkg.github.com/ekimeel/${rootProject.name}")
            credentials {
                username = properties.get("github.actor") ?: System.getenv("GITHUB_ACTOR")
                password = properties.get("github.token") ?: System.getenv("GITHUB_TOKEN")
            }
        }
    }
    publications {
        gpr(MavenPublication) {
            from(components.java)
        }
    }
}